# tapl

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build-test-package.yml
tapl/: CMakeLists.txt
tapl/include/tapl/simple/: ast.hpp  eval.hpp  is_numerical.hpp  is_value.hpp  parse.hpp  pretty_print.hpp  visitor.hpp
tapl/src/: CMakeLists.txt
tapl/src/simple/: CMakeLists.txt  ast.cpp  eval.cpp  is_numerical.cpp  is_value.cpp  lexer.ll  parse.cpp  parser.yy  pretty_print.cpp
test_package/: CMakeLists.txt  conanfile.py  test_tapl_simple.cpp
tests/: CMakeLists.txt  simple.cpp
